decode BSON entries for updates. Use ConcurrentSolrClient